--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   url_launcher: ^6.1.14
   html: ^0.15.4
   video_player: ^2.7.2
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
