Added shadertoy outlink with logo.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ flutter:
     - 'assets/resume.pdf'
     - 'assets/github-invertocat-logo.png'
     - 'assets/devpost-logo.png'
+    - 'assets/shadertoy-logo.png'
 
     # SportVue light
     - 'assets/showcase-media/sportvue/light/calendar-light.png'
