Migrated from PNG to JPG.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,50 +38,50 @@ flutter:
     - 'assets/shadertoy-logo.png'
 
     # SportVue light
-    - 'assets/showcase-media/sportvue/light/calendar-light.png'
-    - 'assets/showcase-media/sportvue/light/dashboard-light.png'
-    - 'assets/showcase-media/sportvue/light/login-light.png'
-    - 'assets/showcase-media/sportvue/light/no-data-light.png'
-    - 'assets/showcase-media/sportvue/light/profile-light.png'
-    - 'assets/showcase-media/sportvue/light/session-data-light.png'
-    - 'assets/showcase-media/sportvue/light/trends-light.png'
+    - 'assets/showcase-media/sportvue/light/calendar-light.jpg'
+    - 'assets/showcase-media/sportvue/light/dashboard-light.jpg'
+    - 'assets/showcase-media/sportvue/light/login-light.jpg'
+    - 'assets/showcase-media/sportvue/light/no-data-light.jpg'
+    - 'assets/showcase-media/sportvue/light/profile-light.jpg'
+    - 'assets/showcase-media/sportvue/light/session-data-light.jpg'
+    - 'assets/showcase-media/sportvue/light/trends-light.jpg'
 
     # SportVue dark
-    - 'assets/showcase-media/sportvue/dark/calendar-dark.png'
-    - 'assets/showcase-media/sportvue/dark/dashboard-dark.png'
-    - 'assets/showcase-media/sportvue/dark/login-dark.png'
-    - 'assets/showcase-media/sportvue/dark/no-data-dark.png'
-    - 'assets/showcase-media/sportvue/dark/profile-dark.png'
-    - 'assets/showcase-media/sportvue/dark/session-data-dark.png'
-    - 'assets/showcase-media/sportvue/dark/trends-dark.png'
+    - 'assets/showcase-media/sportvue/dark/calendar-dark.jpg'
+    - 'assets/showcase-media/sportvue/dark/dashboard-dark.jpg'
+    - 'assets/showcase-media/sportvue/dark/login-dark.jpg'
+    - 'assets/showcase-media/sportvue/dark/no-data-dark.jpg'
+    - 'assets/showcase-media/sportvue/dark/profile-dark.jpg'
+    - 'assets/showcase-media/sportvue/dark/session-data-dark.jpg'
+    - 'assets/showcase-media/sportvue/dark/trends-dark.jpg'
 
     # Layover Party
-    - 'assets/showcase-media/layover-party/onboarding-one.png'
-    - 'assets/showcase-media/layover-party/onboarding-two.png'
-    - 'assets/showcase-media/layover-party/onboarding-three.png'
-    - 'assets/showcase-media/layover-party/search-bar.png'
-    - 'assets/showcase-media/layover-party/trip-ticket.png'
-    - 'assets/showcase-media/layover-party/trips.png'
+    - 'assets/showcase-media/layover-party/onboarding-one.jpg'
+    - 'assets/showcase-media/layover-party/onboarding-two.jpg'
+    - 'assets/showcase-media/layover-party/onboarding-three.jpg'
+    - 'assets/showcase-media/layover-party/search-bar.jpg'
+    - 'assets/showcase-media/layover-party/trip-ticket.jpg'
+    - 'assets/showcase-media/layover-party/trips.jpg'
 
     # Dragonator light
-    - 'assets/showcase-media/dragonator/light/create-paddler-light.png'
-    - 'assets/showcase-media/dragonator/light/roster-light.png'
-    - 'assets/showcase-media/dragonator/light/edit-lineup-light.png'
-    - 'assets/showcase-media/dragonator/light/paddler-details-light.png'
-    - 'assets/showcase-media/dragonator/light/settings-light.png'
+    - 'assets/showcase-media/dragonator/light/create-paddler-light.jpg'
+    - 'assets/showcase-media/dragonator/light/roster-light.jpg'
+    - 'assets/showcase-media/dragonator/light/edit-lineup-light.jpg'
+    - 'assets/showcase-media/dragonator/light/paddler-details-light.jpg'
+    - 'assets/showcase-media/dragonator/light/settings-light.jpg'
 
     # Dragonator dark
-    - 'assets/showcase-media/dragonator/dark/create-paddler-dark.png'
-    - 'assets/showcase-media/dragonator/dark/roster-dark.png'
-    - 'assets/showcase-media/dragonator/dark/edit-lineup-dark.png'
-    - 'assets/showcase-media/dragonator/dark/paddler-details-dark.png'
-    - 'assets/showcase-media/dragonator/dark/settings-dark.png'
+    - 'assets/showcase-media/dragonator/dark/create-paddler-dark.jpg'
+    - 'assets/showcase-media/dragonator/dark/roster-dark.jpg'
+    - 'assets/showcase-media/dragonator/dark/edit-lineup-dark.jpg'
+    - 'assets/showcase-media/dragonator/dark/paddler-details-dark.jpg'
+    - 'assets/showcase-media/dragonator/dark/settings-dark.jpg'
 
     # Allynd
-    - 'assets/showcase-media/allynd/login.png'
-    - 'assets/showcase-media/allynd/onboarding-one.png'
-    - 'assets/showcase-media/allynd/onboarding-two.png'
-    - 'assets/showcase-media/allynd/onboarding-three.png'
+    - 'assets/showcase-media/allynd/login.jpg'
+    - 'assets/showcase-media/allynd/onboarding-one.jpg'
+    - 'assets/showcase-media/allynd/onboarding-two.jpg'
+    - 'assets/showcase-media/allynd/onboarding-three.jpg'
 
   fonts:
     - family: Inter
